data file, test file, imports, and basic app structures added

--- a/package.json
+++ b/package.json
@@ -16,5 +16,11 @@
   "bugs": {
     "url": "https://github.com/eliamue/backitup-backitup-eyy/issues"
   },
-  "homepage": "https://github.com/eliamue/backitup-backitup-eyy#readme"
+  "homepage": "https://github.com/eliamue/backitup-backitup-eyy#readme",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "jest": "^27.0.4",
+    "supertest": "^6.1.3"
+  }
 }
